--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,19 @@ script:
     - netstat -ap | grep gptn
     - cd ../dct
     #- ./deposit_test.sh 4
-    - python -m robot.run -d ../logs -l creatTrans.log.html ../testcase/createTrans
+    - python -m robot.run -d ../logs -l creatTrans_log.html ../testcase/createTrans
     #- python -m robot.run ../testcase/ccinvoke
     #- python -m robot.run ../DigitalIdentityCert
 
 after_success:
     - killall gptn
-    - curl -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/creatTrans.log.html http://ftp.mozilla.org/pub/
+    - curl –u elva1087:123456 -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/creatTrans.log.html ftp://10.0.2.15/bddreport
 
 
 after_failure:
     - killall gptn
+    - curl –u elva1087:123456 -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/creatTrans.log.html ftp://10.0.2.15/bddreport
+
 
 before_install:
     - go get github.com/mattn/goveralls
