--- a/.travis.yml
+++ b/.travis.yml
@@ -18,18 +18,18 @@ script:
     - netstat -ap | grep gptn
     - cd ../dct
     #- ./deposit_test.sh 4
-    - python -m robot.run -d ../logs -l creatTrans_log.html ../testcase/createTrans
+    - python -m robot.run -d ../logs -l createTrans_log.html ../testcase/createTrans
     #- python -m robot.run ../testcase/ccinvoke
     #- python -m robot.run ../DigitalIdentityCert
 
 after_success:
     - killall gptn
-    - curl –u elva1087:123456 -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/creatTrans.log.html ftp://192.168.0.115/bddreport
+    - curl –u elva1087:123456 -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/createTrans_log.html ftp://192.168.0.115:21/bddreport
 
 
 after_failure:
     - killall gptn
-    - curl –u elva1087:123456 -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/creatTrans.log.html ftp://192.168.0.115/bddreport
+    - curl –u elva1087:123456 -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/createTrans_log.html ftp://192.168.0.115:21/bddreport
 
 
 before_install:
