--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ dist: xenial
 sudo: required
 language:
     - go
+
 go:
     - 1.10.8
 script:
@@ -17,21 +18,27 @@ script:
     - sleep 15
     - netstat -ap | grep gptn
     - cd ../dct
-    #- ./deposit_test.sh 4
-    - python -m robot.run -d ../logs -l createTrans_log.html ../testcase/createTrans
-    #- python -m robot.run ../testcase/ccinvoke
-    #- python -m robot.run ../DigitalIdentityCert
+#    - ./deposit_test.sh 4
+#    - python -m robot.run ../testcase/createTrans
+#    - python -m robot.run ../testcase/ccinvoke
+    - python -m robot.run -d ../logs -l DigitalIdentityCert.log.html ../DigitalIdentityCert
 
 after_success:
-    - killall gptn
-    - curl -u ftpuser:123456 -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/creatTrans_log.html ftp://98.142.130.141:21/pub/
-
+    - killall gptn 
+    - echo "${SFTP_KEY}" | base64 --decode >/tmp/sftp_rsa 
+    - curl --ftp-create-dirs 
+        -T pub 
+        --key /tmp/sftp_rsa 
+        sftp://ftpuser:123456@98.142.130.141:21/pub/
 
 after_failure:
-    - killall gptn
-    - curl -u ftpuser:123456 -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/creatTrans_log.html ftp://98.142.130.141:21/pub/
-
-
+    - killall gptn 
+    - echo "${SFTP_KEY}" | base64 --decode >/tmp/sftp_rsa 
+    - curl --ftp-create-dirs 
+        -T pub 
+        --key /tmp/sftp_rsa 
+        sftp://ftpuser:123456@98.142.130.141:21/pub/
+    
 before_install:
     - go get github.com/mattn/goveralls
     - go get -u github.com/palletone/adaptor
@@ -39,6 +46,14 @@ before_install:
     - go get -u github.com/palletone/eth-adaptor
     - go get -u github.com/palletone/digital-identity/...
     - source ./gomockgen.sh
+    
+    
+env:
+    global:
+        - 'SFTP_USER=[user]'
+        - 'SFTP_PASSWORD=[password]'
+        - 'SFTP_KEY=[base64-encoded-rsa-key]'
+
 
 install:
     - python -V
@@ -64,10 +79,6 @@ notifications:
             - elva1087penny@163.com
         on_success: always # default: change
         on_failure: always
-        
+
 deploy:
     skip_cleanup: true
-
-on:
-    tags: true
-    all_branches: true
