--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
     #- python -m robot.run ../DigitalIdentityCert
 
 after_success:
-    - curl -u ftpuser:123456 -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/createTrans_log.html ftp://98.142.130.141:21/pub/
+    - curl -u $USER:$PASSWORD -T /home/travis/gopath/src/github.com/palletone/go-palletone/bdd/logs/createTrans_log.html ftp://98.142.130.141:21/pub/
     - killall gptn
 
 
