--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script:
     #- ./deposit_test.sh 4
     #- python -m robot.run -d ${BDD_LOG_PATH}/${CREATE_TRANS_DIR} ../testcase/createTrans
     #- python -m robot.run -d ${BDD_LOG_PATH}/${CCINVOKE_DIR} ../testcase/ccinvoke
-    - python -m robot.run -d ${BDD_LOG_PATH}/${VOTECONTRACT_DIR} ../testcase/voteContract
+    - python -m robot.run -d ${BDD_LOG_PATH}/${VOTECONTRACT_DIR} ../testcase/voteContract/ccinvokePass/.
     #- python -m robot.run -d ${BDD_LOG_PATH}/${DIGITAL_IDENTITY_DIR} ../DigitalIdentityCert
 
 after_script:
@@ -88,8 +88,8 @@ addons:
 
 deploy:
     skip_cleanup: true
-#    on:
-#        branch: certbdd
+    on:
+        branch: bdd
 
 notifications:
     email: elva1087penny@163.com
