--- a/.travis.yml
+++ b/.travis.yml
@@ -31,13 +31,12 @@ script:
     - sleep 15
     - netstat -ap | grep gptn
     - cp address/* palletone/keystore/
-    - ls -l palletone/keystore/
     - cd ../dct
     - mkdir -p ${BDD_LOG_PATH}
     #- ./deposit_test.sh 4
     #- python -m robot.run -d ${BDD_LOG_PATH}/${CREATE_TRANS_DIR} ../testcase/createTrans
     #- python -m robot.run -d ${BDD_LOG_PATH}/${CCINVOKE_DIR} ../testcase/ccinvoke
-    - python -m robot.run -d ${BDD_LOG_PATH}/${VOTECONTRACT_DIR} ../testcase/voteContract/ccinvokePass/voteContract_RecieverPTN.robot
+    - python -m robot.run -d ${BDD_LOG_PATH}/${VOTECONTRACT_DIR} ../testcase/voteContract/ccinvokePass/.
     #- python -m robot.run -d ${BDD_LOG_PATH}/${DIGITAL_IDENTITY_DIR} ../DigitalIdentityCert
 
 after_script:
@@ -87,10 +86,10 @@ addons:
     apt:
         update: true
 
-deploy:
-    skip_cleanup: true
-    on:
-        branch: bdd
+#deploy:
+#    skip_cleanup: true
+#    on:
+#        branch: bdd
 
 notifications:
     email: elva1087penny@163.com
