--- a/.travis.yml
+++ b/.travis.yml
@@ -86,8 +86,8 @@ addons:
     apt:
         update: true
 
-#deploy:
-#    skip_cleanup: true
+deploy:
+    skip_cleanup: true
 #    on:
 #        branch: bdd
 
