--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,9 @@ script:
     - cd ../dct
     - mkdir -p ${BDD_LOG_PATH}
     #- ./deposit_test.sh 4
-    - python -m robot.run -d ${BDD_LOG_PATH}/${CREATE_TRANS_DIR} ../testcase/createTrans
-    - python -m robot.run -d ${BDD_LOG_PATH}/${CCINVOKE_DIR} ../testcase/crtCoinContract
-    - python -m robot.run -d ${BDD_LOG_PATH}/${VOTECONTRACT_DIR} ../testcase/voteContract/.
+    - python -m robot.run -d ${BDD_LOG_PATH}/${CREATE_TRANS_DIR}  --include nomal ../testcase/createTrans
+    - python -m robot.run -d ${BDD_LOG_PATH}/${CCINVOKE_DIR} --include nomal ../testcase/crtCoinContract
+    - python -m robot.run -d ${BDD_LOG_PATH}/${VOTECONTRACT_DIR} --include nomal ../testcase/voteContract/
     #- python -m robot.run -d ${BDD_LOG_PATH}/${DIGITAL_IDENTITY_DIR} ../DigitalIdentityCert
 
 after_script:
